--- a/yjgl/yjylgl.html
+++ b/yjgl/yjylgl.html
@@ -330,37 +330,37 @@
                     <div class="panel">
                         <div class="panel-body">
                             <div class="blog-post">
-                                <h3>Latest Blog Post</h3>
+                                <h3>应急演习列表</h3>
                                 <div class="media">
                                     <a href="javascript:;" class="pull-left">
-                                        <img alt="" src="images/blog/blog-thumb-1.jpg" class=" ">
+                                        <img alt="" src="../images/blog/blog-thumb-1.jpg" class=" ">
                                     </a>
                                     <div class="media-body">
-                                        <h5 class="media-heading"><a href="javascript:;">02 May 2013 </a></h5>
+                                        <h5 class="media-heading"><a href="javascript:;">2017.11.23</a></h5>
                                         <p>
-                                            Donec id elit non mi porta gravida at eget metus amet int
+                                            <span class="label label-danger">【荐读】</span>11月23日，天一广场进行应急演练，参与单位：市水利局、市防汛抗旱分管处...
                                         </p>
                                     </div>
                                 </div>
                                 <div class="media">
                                     <a href="javascript:;" class="pull-left">
-                                        <img alt="" src="images/blog/blog-thumb-2.jpg" class=" ">
+                                        <img alt="" src="../images/blog/blog-thumb-2.jpg" class=" ">
                                     </a>
                                     <div class="media-body">
-                                        <h5 class="media-heading"><a href="javascript:;">02 May 2013 </a></h5>
+                                        <h5 class="media-heading"><a href="javascript:;">2017.10.03</a></h5>
                                         <p>
-                                            Donec id elit non mi porta gravida at eget metus amet int
+                                            <span class="label label-danger">【荐读】</span>10月03日，针对“防洪主题”采取3级联动方案进行应急演练，参与单位：市水利局、市防汛抗旱分管处...
                                         </p>
                                     </div>
                                 </div>
                                 <div class="media">
                                     <a href="javascript:;" class="pull-left">
-                                        <img alt="" src="images/blog/blog-thumb-3.jpg" class=" ">
+                                        <img alt="" src="../images/blog/blog-thumb-3.jpg" class=" ">
                                     </a>
                                     <div class="media-body">
-                                        <h5 class="media-heading"><a href="javascript:;">02 May 2013 </a></h5>
+                                        <h5 class="media-heading"><a href="javascript:;">2017.8.17</a></h5>
                                         <p>
-                                            Donec id elit non mi porta gravida at eget metus amet int
+                                            <span class="label label-danger">【荐读】</span>8月17日，就全市范围内的所有泵闸站的设备进行突击检查，排除有危险隐患的设备...
                                         </p>
                                     </div>
                                 </div>
@@ -370,12 +370,12 @@
                     <div class="panel">
                         <div class="panel-body">
                             <div class="blog-post">
-                                <h3>recent comments</h3>
+                                <h3>联动单位</h3>
                                 <ul>
-                                    <li><a href="javascript:;"><i class="  fa fa-comments-o"></i> admin on Vestiblulum quis dolor </a></li>
-                                    <li><a href="javascript:;"><i class="  fa fa-comments-o"></i> admin on Nam sed arcu tellus</a></li>
-                                    <li><a href="javascript:;"><i class="  fa fa-comments-o"></i> monster002 on Fringilla ut vel ipsum </a></li>
-                                    <li><a href="javascript:;"><i class="  fa fa-comments-o"></i> admin on Vestiblulum quis dolor sit</a></li>
+                                    <li><a href="javascript:;"><i class="  fa fa-comments-o"></i> 市水利局 </a></li>
+                                    <li><a href="javascript:;"><i class="  fa fa-comments-o"></i> 市防汛抗旱分管处</a></li>
+                                    <li><a href="javascript:;"><i class="  fa fa-comments-o"></i> 市海洋管理处 </a></li>
+                                    <li><a href="javascript:;"><i class="  fa fa-comments-o"></i> 市应急指挥中心</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -383,13 +383,13 @@
                     <div class="panel">
                         <div class="panel-body">
                             <div class="blog-post">
-                                <h3>category</h3>
+                                <h3>应急类别</h3>
                                 <ul>
-                                    <li><a href="javascript:;"><i class="  fa fa-angle-right"></i> Animals</a></li>
-                                    <li><a href="javascript:;"><i class="  fa fa-angle-right"></i> Landscape</a></li>
-                                    <li><a href="javascript:;"><i class="  fa fa-angle-right"></i> Portait</a></li>
-                                    <li><a href="javascript:;"><i class="  fa fa-angle-right"></i> Wild Life</a></li>
-                                    <li><a href="javascript:;"><i class="  fa fa-angle-right"></i> Video</a></li>
+                                    <li><a href="javascript:;"><i class="  fa fa-angle-right"></i> 洪水灾害类别</a></li>
+                                    <li><a href="javascript:;"><i class="  fa fa-angle-right"></i> 台风灾害类别</a></li>
+                                    <li><a href="javascript:;"><i class="  fa fa-angle-right"></i> 暴雨灾害类别</a></li>
+                                    <li><a href="javascript:;"><i class="  fa fa-angle-right"></i> 设备故障类别</a></li>
+                                    <li><a href="javascript:;"><i class="  fa fa-angle-right"></i> 人为灾害类别</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -397,13 +397,13 @@
                     <div class="panel">
                         <div class="panel-body">
                             <div class="blog-post">
-                                <h3>blog archive</h3>
+                                <h3>历史演练文档</h3>
                                 <ul>
-                                    <li><a href="javascript:;"><i class="  fa fa-angle-right"></i> May 2013</a></li>
-                                    <li><a href="javascript:;"><i class="  fa fa-angle-right"></i> April 2013</a></li>
-                                    <li><a href="javascript:;"><i class="  fa fa-angle-right"></i> March 2013</a></li>
-                                    <li><a href="javascript:;"><i class="  fa fa-angle-right"></i> February 2013</a></li>
-                                    <li><a href="javascript:;"><i class="  fa fa-angle-right"></i> January 2013</a></li>
+                                    <li><a href="javascript:;"><i class="  fa fa-angle-right"></i> 2017年09月~12月</a></li>
+                                    <li><a href="javascript:;"><i class="  fa fa-angle-right"></i> 2017年06月~09月</a></li>
+                                    <li><a href="javascript:;"><i class="  fa fa-angle-right"></i> 2017年03月~06月</a></li>
+                                    <li><a href="javascript:;"><i class="  fa fa-angle-right"></i> 2016年12月~03月</a></li>
+                                    <li><a href="javascript:;"><i class="  fa fa-angle-right"></i> 2016年09月~12月</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -413,135 +413,53 @@
                 <div class="col-md-8">
                     <div class="panel">
                         <div class="panel-body">
-                            <h1 class="text-center mtop35"><a href="#">Neque porro quisquam est qui dolo rem ipsum quio</a></h1>
+                            <h1 class="text-center mtop35"><a href="#">物资供应应急协调组应急工作制度</a></h1>
                             <p class="text-center auth-row">
-                                By <a href="#">Anthony Jones</a>   |   27 December 2014   | <a href="#">5 Comments</a>
+                                By <a href="#">应急小组</a>   |   2017年11月27日   | <a href="#">5 评论</a>
                             </p>
                             <div class="blog-img-wide">
-                                <img src="images/blog/blog-wide-img.jpg" alt="">
+                                <img src="../images/blog/blog-wide-img.jpg" alt="">
                             </div>
-                            <p>Donec ultrices faucibus rutrum. Phasellus sodales vulputate urna, vel accumsan augue egestas ac. Donec vitae leo at sem lobortis porttitor eu consequat risus. Mauris sed congue orci.
-                            </p>
-                            <a href="#" class="more">Continue Reading</a>
+                            <p>物资供应应急协调组由生产技术部、物流分中心和财务部组成，其职责是：在公司抗震救灾领导小组的领导下，负责组织和协调系统各单位应急物资调配工作。
+                                当进入临震应急期后，按照抗震救灾领导小组的指示，做好抗震救灾物资和电力抢修物资的应急准备工作。</p>
+                            <a href="#" class="more">全文...</a>
                         </div>
                     </div>
                     <div class="panel">
                         <div class="panel-body">
-                            <div class="blog-img-wide">
-                                <img src="images/blog/blog-wide-img.jpg" alt="">
-                            </div>
-                            <h1 class=""><a href="#">Neque porro quisquam est qui dolo rem ipsum quio</a></h1>
+                            <h1 class=""><a href="#">气象局启动重大灾害Ⅱ级应急响应应对高温</a></h1>
                             <p class=" auth-row">
-                                By <a href="#">Anthony Jones</a>   |   27 December 2014   | <a href="#">5 Comments</a>
+                                By <a href="#">应急小组</a>   |   2017年10月24日   | <a href="#">5 评论</a>
                             </p>
 
-                            <p>Donec ultrices faucibus rutrum. Phasellus sodales vulputate urna, vel accumsan augue egestas ac. Donec vitae leo at sem lobortis porttitor eu consequat risus. Mauris sed congue orci.
-                            </p>
-                            <a href="#" class="more">Continue Reading</a>
+                            <p> 30日，中国气象局启动了重大气象灾害(高温)Ⅱ级应急响应。是我国目前为止气象部门启动的最高级别的高温应急响应。那么，为何这次高温天气影响范围如此之广，持续时间如此之长，未来会不会凉快些呢？
+                                　　为什么天气持续高温不退，影响范围又如此广？中央气象台首席气象分析师何立富介绍，副热带高压是制造高温的元凶：“第一个就是今年长江中下游地区出梅比较早，持续受副热带高压北跳和加强的控制，
+                                第二个原因就是没有强台风登陆北上，就是深入到内陆这种情况，导致副热带高压持续控制长江中下游地区。”</p>
+                            <a href="#" class="more">全文...</a>
                         </div>
                     </div>
                     <div class="panel">
                         <div class="panel-body">
-                            <div class="row">
-                                <div class="col-md-5">
-                                    <div class="blog-img-sm">
-                                        <img src="images/blog/blog-sm-img.jpg" alt="">
-                                    </div>
-                                </div>
-                                <div class="col-md-7">
-                                    <h1 class=""><a href="#">Neque porro quisquam est qui dolo</a></h1>
-                                    <p class=" auth-row">
-                                        By <a href="#">Anthony Jones</a>   |   27 December 2014   | <a href="#">5 Comments</a>
-                                    </p>
+                            <h1 class=""><a href="#">信息发布与防震宣传应急工作组应急工作制度</a></h1>
+                            <p class=" auth-row">
+                                By <a href="#">应急小组</a>   |   2017年7月1日   | <a href="#">12 评论</a>
+                            </p>
 
-                                    <p>Donec ultrices faucibus rutrum. Phasellus sodales vulputate urna, vel accumsan augue egestas ac. Donec vitae leo at sem lobortis porttitor eu consequat risus. Mauris sed congue orci.
-                                    </p>
-                                    <a href="#" class="more">Continue Reading</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel">
-                        <div class="panel-body text-center">
-                            <h1 class="mtop35"><a href="#">Neque porro quisquam est qui dolo rem ipsum quio</a></h1>
-                            <p class=" auth-row">
-                                By <a href="#">Anthony Jones</a>   |   27 December 2014   | <a href="#">5 Comments</a>
-                            </p>
-                            <p class="">Donec ultrices faucibus rutrum. Phasellus sodales vulputate urna, vel accumsan augue egestas ac. Donec vitae leo at sem lobortis porttitor eu consequat risus. Mauris sed congue orci.
-                            </p>
-                            <a href="#" class="more mbot20">Continue Reading</a>
-                        </div>
-                    </div>
-                    <div class="panel">
-                        <div class="panel-body text-center">
-                            <i class="fa fa-quote-left"></i>
-                            <h1 class="">Proin sit amet sapien euismod, pretium ligula quis, tempus dui. Nam varius arcu id elit tristique consequat.</h1>
-                            <p class=" auth-row">
-                                <em> Anthony Jones</em>
-                            </p>
+                            <p> 信息发布与防震宣传应急工作由行政工作部、政治工作部、工会和生产技术部组成，其职责是：在公司抗震救灾领导小组的领导下，负责抗震救灾信息发布和防震知识宣传工作。
+                                2、 当进入临震应急期后，按照抗震救灾领导小组的指示，做好抗震救灾知识的宣传工作，平息谣传。</p>
+                            <a href="#" class="more">全文...</a>
                         </div>
                     </div>
                     <div class="panel">
                         <div class="panel-body">
-                            <h1 class="mtop35"><a href="#">Neque porro quisquam est qui dolo rem ipsum quio</a></h1>
+                            <h1 class="mtop35"><a href="#">配电室火灾应急演练预案</a></h1>
                             <p class=" auth-row">
-                                By <a href="#">Anthony Jones</a>   |   27 December 2014   | <a href="#">5 Comments</a>
+                                By <a href="#">应急小组</a>   |   2017年5月10日   | <a href="#">15 评论</a>
                             </p>
-                            <p class="">Donec ultrices faucibus rutrum. Phasellus sodales vulputate urna, vel accumsan augue egestas ac. Donec vitae leo at sem lobortis porttitor eu consequat risus. Mauris sed congue orci.
-                            </p>
-                            <a href="#" class="more mbot20">Continue Reading</a>
-                        </div>
-                    </div>
-
-                    <div class="panel">
-                        <div class="panel-body">
-                            <div id="c-slide" class="carousel slide auto">
-                                <ol class="carousel-indicators out">
-                                    <li class="active" data-slide-to="0" data-target="#c-slide"></li>
-                                    <li class="" data-slide-to="1" data-target="#c-slide"></li>
-                                    <li class="" data-slide-to="2" data-target="#c-slide"></li>
-                                </ol>
-                                <div class="carousel-inner blog-img-wide">
-                                    <div class="item text-center active">
-                                        <img src="images/blog/image2.jpg" alt="">
-                                    </div>
-                                    <div class="item text-center">
-                                        <img src="images/blog/image3.jpg" alt="">
-                                    </div>
-                                    <div class="item text-center">
-                                        <img src="images/blog/blog-wide-img.jpg" alt="">
-                                    </div>
-                                </div>
-                            </div>
-
-                            <h1 class=""><a href="#">Neque porro quisquam est qui dolo rem ipsum quio</a></h1>
-                            <p class=" auth-row">
-                                By <a href="#">Anthony Jones</a>   |   27 December 2014   | <a href="#">5 Comments</a>
-                            </p>
-
-                        </div>
-                    </div>
-
-                    <div class="panel">
-                        <div class="panel-body">
-                            <p class="">
-                                <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/53814789&amp;color=ff5500&amp;auto_play=false&amp;show_artwork=true"></iframe>
-                            </p>
-                            <h1 class=""><a href="#">Neque porro quisquam est qui dolo rem ipsum quio</a></h1>
-                            <p class=" auth-row">
-                                By <a href="#">Anthony Jones</a>   |   27 December 2014   | <a href="#">5 Comments</a>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="panel">
-                        <div class="panel-body">
-                            <p class="">
-                                <iframe width="560" height="315" src="//www.youtube.com/embed/lq_BVyou38s" frameborder="0" allowfullscreen></iframe>
-                            </p>
-                            <h1 class=""><a href="#">Neque porro quisquam est qui dolo rem ipsum quio</a></h1>
-                            <p class=" auth-row">
-                                By <a href="#">Anthony Jones</a>   |   27 December 2014   | <a href="#">5 Comments</a>
-                            </p>
+                            <p class=""> 1、中控室接到低压配电室发生着火立即用对讲机通知组长董诗星迅速通知组员佩戴好防毒口罩、应急照明器具、通讯器材并带附近的灭火器赶往低压配电室。对低压配电室、各配电柜、电缆夹层进行检查，是否有其它异常情况，并立即向主管领导汇报。
+                                2、组长立即将现场的情况通知调度及上一级主管领导，并及时赶到现场查看情况，找出具体故障点。并通知生产班组查看现场设备有无异常。
+                                3、厂内高低压配电房装有气体报警系统及气体灭火装置</p>
+                            <a href="#" class="more mbot20">全文...</a>
                         </div>
                     </div>
                     <div class="text-center">
