--- a/yjgl/yjylgl.html
+++ b/yjgl/yjylgl.html
@@ -324,7 +324,7 @@
                 <div class="col-md-4">
                     <div class="panel">
                         <div class="panel-body">
-                            <input type="text" placeholder="Search Blog" class="form-control blog-search">
+                            <input type="text" placeholder="搜索文档" class="form-control blog-search">
                         </div>
                     </div>
                     <div class="panel">
@@ -413,13 +413,13 @@
                 <div class="col-md-8">
                     <div class="panel">
                         <div class="panel-body">
-                            <h1 class="text-center mtop35"><a href="#">物资供应应急协调组应急工作制度</a></h1>
-                            <p class="text-center auth-row">
+                            <h1 class="mtop35"><a href="#">物资供应应急协调组应急工作制度</a></h1>
+                            <p class=" auth-row">
                                 By <a href="#">应急小组</a>   |   2017年11月27日   | <a href="#">5 评论</a>
                             </p>
-                            <div class="blog-img-wide">
+                           <!-- <div class="blog-img-wide">
                                 <img src="../images/blog/blog-wide-img.jpg" alt="">
-                            </div>
+                            </div>-->
                             <p>物资供应应急协调组由生产技术部、物流分中心和财务部组成，其职责是：在公司抗震救灾领导小组的领导下，负责组织和协调系统各单位应急物资调配工作。
                                 当进入临震应急期后，按照抗震救灾领导小组的指示，做好抗震救灾物资和电力抢修物资的应急准备工作。</p>
                             <a href="#" class="more">全文...</a>
