--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
                     <img src="images/tem-inner-logo.png" alt="">
                 </a>
             </div>
-
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="index.html">首 页</a></li>
                     <li><a href="zhgl.html">综合管理</a></li>
-                    <li class="dropdown">
+                    <li><a href="yxkz.html">运行控制管理</a></li>
+                    <!--<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"> 运行控制管理 <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">土壤含水量监测</a></li>
@@ -88,8 +88,7 @@
                             <li><a href="#">河道监测</a></li>
                             <li><a href="#">泵闸站监测</a></li>
                         </ul>
-                    </li>
-                    <li><a href="#">设备自检管理</a></li>
+                    </li>-->
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">水雨情 <b class="caret"></b></a>
                         <ul class="dropdown-menu">
@@ -101,7 +100,8 @@
                             <li><a href="syqgl/cwgl.html">潮位管理</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown">
+                    <li><a href="gwfx.html">管网分析</a></li>
+                    <!--<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">管网分析 <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">流量分析</a></li>
@@ -110,7 +110,7 @@
                             <li><a href="#">坡度分析</a></li>
                             <li><a href="#">污染溯源分析</a></li>
                         </ul>
-                    </li>
+                    </li>-->
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">运维管理 <b class="caret"></b></a>
                         <ul class="dropdown-menu">
@@ -136,14 +136,15 @@
 
                         </ul>
                     </li>
-                    <li class="dropdown">
+                    <li><a href="zhpj.html">综合评价</a></li>
+                    <!--<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">综合评价 <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">国家和地方标准</a></li>
                             <li><a href="#">绩效和考核</a></li>
                             <li><a href="#">排水能力负荷</a></li>
                         </ul>
-                    </li>
+                    </li>-->
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">基础设置 <b class="caret"></b></a>
                         <ul class="dropdown-menu">
@@ -156,12 +157,6 @@
                         </ul>
                     </li>
                 </ul>
-
-
-
-
-
-
 
                 <ul class="nav navbar-nav navbar-right">
                     <li>
