--- a/index_bak.html
+++ b/index_bak.html
@@ -93,16 +93,16 @@
 					<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">运维管理 <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="ywgl/ysgl.html">设备管理.验收管理</a></li>
-							<li><a href="ywgl/thgl.html">设备管理.退货管理</a></li>
-							<li><a href="ywgl/gysgl.html">设备管理.供应商管理</a></li>
-							<li><a href="ywgl/sbtzgl.html">设备管理.台账管理</a></li>
-							<li><a href="ywgl/whgl.html">设备管理.维护管理</a></li>
-							<li><a href="ywgl/wxgl.html">设备管理.维修管理</a></li>
-							<li><a href="ywgl/bpbjgl.html">设备管理.备品备件管理</a></li>
-                            <li><a href="ywgl/xjjhgl.html">巡检管理.巡检计划管理</a></li>
-							<li><a href="ywgl/xjrwgl.html">巡检管理.巡检任务管理</a></li>
-							<li><a href="ywgl/xjtjgl.html">巡检管理.巡检统计管理</a></li>
+                            <li><a href="ysgl.html">设备管理.验收管理</a></li>
+							<li><a href="thgl.html">设备管理.退货管理</a></li>
+							<li><a href="gysgl.html">设备管理.供应商管理</a></li>
+							<li><a href="sbtzgl.html">设备管理.台账管理</a></li>
+							<li><a href="whgl.html">设备管理.维护管理</a></li>
+							<li><a href="wxgl.html">设备管理.维修管理</a></li>
+							<li><a href="bpbjgl.html">设备管理.备品备件管理</a></li>
+                            <li><a href="xjjhgl.html">巡检管理.巡检计划管理</a></li>
+							<li><a href="xjrwgl.html">巡检管理.巡检任务管理</a></li>
+							<li><a href="xjtjgl.html">巡检管理.巡检统计管理</a></li>
                         </ul>
                     </li>
 					<li class="dropdown">
