--- a/yjgl/yjxxgl.html
+++ b/yjgl/yjxxgl.html
@@ -48,17 +48,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="../index.html">
                     <img src="../images/tem-inner-logo.png" alt="">
                 </a>
             </div>
-
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="../index.html">首 页</a></li>
-                    <li><a href="综合管理.html">综合管理</a></li>
-                    <li class="dropdown">
+                    <li><a href="../zhgl.html">综合管理</a></li>
+                    <li><a href="../yxkz.html">运行控制管理</a></li>
+                    <!--<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"> 运行控制管理 <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">土壤含水量监测</a></li>
@@ -67,18 +67,20 @@
                             <li><a href="#">河道监测</a></li>
                             <li><a href="#">泵闸站监测</a></li>
                         </ul>
-                    </li>
-                    <li><a href="#">设备自检管理</a></li>
-                    <li class="dropdown active">
+                    </li>-->
+                    <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">水雨情 <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li class="active"><a href="#">雨情管理</a></li>
-                            <li><a href="#">风情管理</a></li>
-                            <li><a href="#">水情管理</a></li>
-                            <li><a href="#">潮位管理</a></li>
+                            <li><a href="../syqgl/yqgl.html">雨情管理</a></li>
+                            <li><a href="../syqgl/yqssgk.html">雨情实时概况</a></li>
+                            <li><a href="../syqgl/yqbbfx.html">雨情报表分析</a></li>
+                            <li><a href="../syqgl/sqgl.html">水情管理</a></li>
+                            <li><a href="../syqgl/fqgl.html">风情管理</a></li>
+                            <li><a href="../syqgl/cwgl.html">潮位管理</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown">
+                    <li><a href="../gwfx.html">管网分析</a></li>
+                    <!--<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">管网分析 <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">流量分析</a></li>
@@ -87,37 +89,45 @@
                             <li><a href="#">坡度分析</a></li>
                             <li><a href="#">污染溯源分析</a></li>
                         </ul>
-                    </li>
+                    </li>-->
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">运维管理 <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">设备管理</a></li>
-                            <li><a href="#">巡检管理</a></li>
-
+                            <li><a href="../ywgl/ysgl.html">设备管理.验收管理</a></li>
+                            <li><a href="../ywgl/thgl.html">设备管理.退货管理</a></li>
+                            <li><a href="../ywgl/gysgl.html">设备管理.供应商管理</a></li>
+                            <li><a href="../ywgl/sbtzgl.html">设备管理.台账管理</a></li>
+                            <li><a href="../ywgl/whgl.html">设备管理.维护管理</a></li>
+                            <li><a href="../ywgl/wxgl.html">设备管理.维修管理</a></li>
+                            <li><a href="../ywgl/bpbjgl.html">设备管理.备品备件管理</a></li>
+                            <li><a href="../ywgl/xjjhgl.html">巡检管理.巡检计划管理</a></li>
+                            <li><a href="../ywgl/xjrwgl.html">巡检管理.巡检任务管理</a></li>
+                            <li><a href="../ywgl/xjtjgl.html">巡检管理.巡检统计管理</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">应急管理 <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">应急响应管理</a></li>
-                            <li><a href="#">现场指挥管理</a></li>
-                            <li><a href="#">应急演练管理</a></li>
-                            <li><a href="#">应急信息管理</a></li>
+                            <li><a href="yjxygl-jjgl.html">应急响应管理</a></li>
+                            <li><a href="xczhgl.html">现场指挥管理</a></li>
+                            <li><a href="yjylgl.html">应急演练管理</a></li>
+                            <li><a href="yjxxgl.html">应急信息管理</a></li>
 
                         </ul>
                     </li>
-                    <li class="dropdown">
+                    <li><a href="../zhpj.html">综合评价</a></li>
+                    <!--<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">综合评价 <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">国家和地方标准</a></li>
                             <li><a href="#">绩效和考核</a></li>
                             <li><a href="#">排水能力负荷</a></li>
                         </ul>
-                    </li>
+                    </li>-->
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">基础设置 <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">人员管理</a></li>
+                            <li><a href="../jcsz/rygl.html">人员管理</a></li>
                             <li><a href="#">组织管理</a></li>
                             <li><a href="#">资源管理</a></li>
                             <li><a href="#">角色管理</a></li>
@@ -126,12 +136,6 @@
                         </ul>
                     </li>
                 </ul>
-
-
-
-
-
-
 
                 <ul class="nav navbar-nav navbar-right">
                     <li>
@@ -201,7 +205,7 @@
                             <ul class="dropdown-list user-list">
                                 <li class="new">
                                     <a href="">
-                                        <span class="thumb"><img src="../images/photos/user1.png" alt="" /></span>
+                                        <span class="thumb"><img src="images/photos/user1.png" alt="" /></span>
                                         <span class="desc">
                                           <span class="name">卢云晓 <span class="badge badge-success">new</span></span>
                                           <span class="msg">泵运行情况...</span>
@@ -210,7 +214,7 @@
                                 </li>
                                 <li>
                                     <a href="">
-                                        <span class="thumb"><img src="../images/photos/user2.png" alt="" /></span>
+                                        <span class="thumb"><img src="images/photos/user2.png" alt="" /></span>
                                         <span class="desc">
                                           <span class="name">卢云晓</span>
                                           <span class="msg">帮忙批阅以下文件...</span>
@@ -220,7 +224,7 @@
 
                                 <li>
                                     <a href="">
-                                        <span class="thumb"><img src="../images/photos/user4.png" alt="" /></span>
+                                        <span class="thumb"><img src="images/photos/user4.png" alt="" /></span>
                                         <span class="desc">
                                           <span class="name">赵胤君</span>
                                           <span class="msg">日常更改巡检计划...</span>
@@ -229,7 +233,7 @@
                                 </li>
                                 <li>
                                     <a href="">
-                                        <span class="thumb"><img src="../images/photos/user5.png" alt="" /></span>
+                                        <span class="thumb"><img src="images/photos/user5.png" alt="" /></span>
                                         <span class="desc">
                                           <span class="name">袁公子</span>
                                           <span class="msg">防止海潮倒灌办法...</span>
@@ -284,7 +288,7 @@
 
 
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <img alt="" src="../images/photos/user-avatar.png"> 超级管理员 <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <img alt="" src="images/photos/user-avatar.png"> 超级管理员 <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">主页</a></li>
                             <li><a href="#">设置</a></li>
