--- a/syqgl/yqgl.html
+++ b/syqgl/yqgl.html
@@ -14,7 +14,7 @@
   <link href="../js/iCheck/skins/square/square.css" rel="stylesheet">
   <link href="../js/iCheck/skins/square/red.css" rel="stylesheet">
   <link href="../js/iCheck/skins/square/blue.css" rel="stylesheet">
-  
+    <link rel="stylesheet" href="../css/loading.css">
     <!--dashboard calendar-->
   <link href="../css/clndr.css" rel="stylesheet">
 
@@ -99,7 +99,16 @@
 </head>
 
 <body class="horizontal-menu-page">
-
+<div id="loading">
+    <div id="loading-center">
+        <div id="loading-center-absolute">
+            <div class="object" id="object_one"></div>
+            <div class="object" id="object_two"></div>
+            <div class="object" id="object_three"></div>
+            <div class="object" id="object_four"></div>
+        </div>
+    </div>
+</div>
 
 <section>
     <nav class="navbar navbar-default" role="navigation">
@@ -596,6 +605,12 @@
 <script src="http://webapi.amap.com/ui/1.0/main.js?v=1.0.11"></script>
 <script src="https://webapi.amap.com/js/marker.js"></script>
 <script type="text/javascript" src="https://webapi.amap.com/demos/js/liteToolbar.js"></script>
+
+<script>
+    $(window).load(function() {
+        $("#loading").delay(1200).fadeOut(500);
+    })
+</script>
  <script type="text/javascript">
     /* jQuery(document).ready(function() {
 
